# spinify

./: Cargo.toml  LICENSE  README.md  catheta.cpp
src/: lib.rs  main.rs
