[package]
name = "spinify"
version = "0.1.0"
edition = "2021"
authors = ["hunterhartline@gmail.com"]
description = "A Rust library providing utilities for spawning asynchronous tasks with progress spinners using the indicatif crate."
license = "MIT"
repository = "https://github.com/yourusername/spinify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
